--- a/sdal/BeamOptions.tex
+++ b/sdal/BeamOptions.tex
@@ -36,10 +36,10 @@
     \put(\LenToUnit{0.8295\paperwidth},\LenToUnit{0.9\paperheight}){#1}}}
 \AddToShipoutPictureFG{
   \AtPagemyUpperLeft{{
-      \href{http://mc-stan.org/}{\includegraphics[scale=0.2,keepaspectratio]{../logos/Stan.png}}
-      \hspace{0.025in}
-      \href{http://ggplot2.tidyverse.org}{\includegraphics[scale=0.4,keepaspectratio]{../logos/ggplot2.png}}
-      \hspace{0.025in}
-      \href{https://www.r-project.org/}{\includegraphics[scale=0.1,keepaspectratio]{../logos/R.png}}
+      %\href{http://mc-stan.org/}{\includegraphics[scale=0.2,keepaspectratio]{../logos/Stan.png}}
+      %\hspace{0.025in}
+      %\href{http://ggplot2.tidyverse.org}{\includegraphics[scale=0.4,keepaspectratio]{../logos/ggplot2.png}}
+      %\hspace{0.025in}
+      %\href{https://www.r-project.org/}{\includegraphics[scale=0.1,keepaspectratio]{../logos/R.png}}
 }}
 }%
